# AgainstAllOdds-Backend

./: Cargo.toml  README.md  netlify.toml  nx.json  package.json
apps/myapp/: Cargo.toml  Dockerfile  project.json
apps/myapp/src/: main.rs
libs/cats/: Cargo.toml
libs/cats/src/: lib.rs
netlify/functions/: hello.rs
netlify/functions/cats/: Cargo.toml
netlify/functions/cats/src/: main.rs
netlify/functions/hello/: Cargo.toml
netlify/functions/hello/src/: main.rs
netlify/functions/kittens/: Cargo.toml
netlify/functions/kittens/src/: main.rs
