[package]
name = "myapp"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.4.1"
lambda-web = "0.2.1"
aws_lambda_events = "0.4.0"
http = "0.2.4"
lambda_runtime = "0.3.0"
log = "0.4.14"
simple_logger = "1.11.0"
tokio = "1.6.1"
cats = { path = "../../libs/cats" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
