[package]
name = "myapp"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.4.1"
lambda-web = "0.2.1"
aws_lambda_events = "0.13.0"
http = "1.0.0"
lambda_runtime = "0.9.1"
log = "0.4.14"
simple_logger = "4.3.3"
tokio = "1.6.1"
cats = { path = "../../libs/cats" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
